# Fractal-Images-Generator

./: CMakeLists.txt  README.md
src/: Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  FractalCreator.cpp  FractalCreator.h  Mandelbrot.cpp  Mandelbrot.h  RGB.cpp  RGB.h  Zoom.h  ZoomList.cpp  ZoomList.h  main.cpp
